...
                  AuthHeader(
                    title: l10n.createAccountTitle,
                    description: l10n.createAccountSubtitle,
                  ),
                  const SizedBox(height: CoreSpacing.space8),
                  CoreTextField(
                    key: const Key('create_account_first_name_field'),
                    label: l10n.firstNameLabel,
                    hintText: l10n.firstNameHint,
                    controller: _firstNameController,
                    errorTextList: _firstNameErrorList,
                  ),
                  const SizedBox(height: CoreSpacing.space6),
                  CoreTextField(
                    key: const Key('create_account_last_name_field'),
                    label: l10n.lastNameLabel,
                    hintText: l10n.lastNameHint,
                    controller: _lastNameController,
                    errorTextList: _lastNameErrorList,
                  ),
                  const SizedBox(height: CoreSpacing.space6),
...
                      style: typography.bodySmallRegular.copyWith(
                        color: colors.textError,
                      ),
                    )
                  else
                    SingleItemSelector<String>(
                      key: const Key('create_account_role_selector'),
                      labelText: l10n.roleLabel,
                      hintText: l10n.roleHint,
                      onOpen: _onItemSelectorOpened,
                      selectedItem: _selectedRole?.name,
                      items: _professionalRolesList
                          .map((role) => role.name)
...
                      }
                    },
                    errorTextList: _mobileNumberErrorList,
                  ),
                  const SizedBox(height: CoreSpacing.space6),
                  CoreTextField(
                    key: const Key('create_account_password_field'),
                    label: l10n.passwordLabel,
                    hintText: l10n.passwordHint,
                    controller: _passwordController,
                    obscureText: !_isPasswordVisible,
                    suffix: IconButton(
                      icon: CoreIconWidget(
...
                          : l10n.showPasswordLabel,
                    ),
                    errorTextList: _passwordErrorList,
                  ),
                  const SizedBox(height: CoreSpacing.space6),
                  CoreTextField(
                    key: const Key('create_account_confirm_password_field'),
                    label: l10n.confirmPasswordLabel,
                    hintText: l10n.confirmPasswordHint,
                    controller: _confirmPasswordController,
                    obscureText: !_isConfirmPasswordVisible,
                    suffix: IconButton(
                      icon: CoreIconWidget(
...
                    andAcknowledge: l10n.andAcknowledge,
                    onTermsAndConditionsLinkPressed: _openTermsAndPrivacy,
                    onPrivacyPolicyLinkPressed: _openTermsAndPrivacy,
                  ),
                  const SizedBox(height: 24),
                  CoreButton(
                    key: const Key('create_account_submit_button'),
                    centerAlign: true,
                    isDisabled:
                        !_canPressContinue || state is CreateAccountLoading,
                    onPressed: () {
                      _onSubmit(context);
                    },
...
