...
                  ),
                ],
              ),
            ),
            const SizedBox(height: 24),
            Pinput(
              key: const Key('pin_input'),
              length: 6,
              defaultPinTheme: pinTheme,
              focusedPinTheme: pinTheme.copyWith(
                decoration: pinTheme.decoration?.copyWith(
                  border: Border.all(color: colors.buttonSurface),
                ),
...
                  ),
                ],
              ),
            ),
            const SizedBox(height: CoreSpacing.space6),
            CoreButton(
              key: const Key('otp_verify_button'),
              onPressed: onVerify,
              label: isVerifying
                  ? context.l10n.verifyingButtonLabel
                  : context.l10n.verifyOtpButton,
              isDisabled: verifyButtonDisabled,
              spaceOut: true,
...
