...
                  AuthHeader(
                    title: l10n.letsGetStarted,
                    description: l10n.heyEnterYourDetailsToRegisterWithUs,
                  ),
                  const SizedBox(height: CoreSpacing.space10),
                  CoreTextField(
                    key: const Key('register_email_field'),
                    focusNode: _emailTextFieldFocusNode,
                    controller: _emailController,
                    label: l10n.emailLabel,
                    hintText: l10n.emailHint,
                    errorTextList: _emailErrorTextList,
                    errorWidgetList: _emailErrorWidgetList,
                  ),
                  const SizedBox(height: CoreSpacing.space6),
                  CoreButton(
                    key: const Key('register_email_continue_button'),
                    onPressed: () {
                      _emailTextFieldFocusNode.unfocus();
                      BlocProvider.of<RegisterWithEmailBloc>(context).add(
                        RegisterWithEmailContinuePressed(_emailController.text),
                      );
                    },
...
