...
                  description: l10n.enterPasswordDescription,
                  contact: widget.email,
                  onContactPressed: () => widget.router.pop(),
                ),
                const SizedBox(height: 24),
                CoreTextField(
                  key: const Key('login_password_field'),
                  controller: _passwordController,
                  obscureText: !_isPasswordVisible,
                  label: l10n.passwordLabel,
                  hintText: l10n.passwordHint,
                  suffix: IconButton(
                    icon: CoreIconWidget(
...
                      ),
                    ),
                  ),
                ),
                const SizedBox(height: 16),
                CoreButton(
                  key: const Key('login_password_continue_button'),
                  onPressed: () => _onLoginButtonPressed(context),
                  isDisabled:
                      !_canPressContinue || state is EnterPasswordSubmitLoading,
                  centerAlign: true,
                  label: state is EnterPasswordSubmitLoading
                      ? l10n.loggingInButton
...
