...
            AuthHeader(
              title: l10n.welcomeBack,
              description: l10n.enterYourEmailIdToLoginToYourAccount,
            ),
            const SizedBox(height: CoreSpacing.space10),
            CoreTextField(
              key: const Key('login_email_field'),
              controller: _emailController,
              label: l10n.emailLabel,
              hintText: l10n.emailHint,
              errorWidgetList: _emailErrorWidgetList,
              errorTextList: _emailErrorList,
              keyboardType: TextInputType.emailAddress,
            ),
            const SizedBox(height: CoreSpacing.space6),
            CoreButton(
              key: const Key('login_email_continue_button'),
              isDisabled:
                  !_canPressContinue ||
                  state is LoginWithEmailAvailabilityLoading,
              onPressed: () {
                widget.router.pushNamed(
                  fullEnterPasswordRoute,
...
